syntax = "proto3";

import "protocol.proto";

package atomix.semaphore;

option java_package = "io.atomix.grpc.semaphore";
option java_multiple_files = true;

// Semaphore ID
message SemaphoreId {
    string name = 1;
    oneof proto {
        protocol.MultiRaftProtocol raft = 2;
        protocol.MultiPrimaryProtocol multi_primary = 3;
        protocol.DistributedLogProtocol log = 4;
    }
    int32 permits = 5;
}

// Acquire request
message AcquireRequest {
    SemaphoreId id = 1;
    int32 permits = 2;
}

// Acquire response
message AcquireResponse {
    uint64 version = 1;
}

// Release request
message ReleaseRequest {
    SemaphoreId id = 1;
    int32 permits = 2;
}

// Release response
message ReleaseResponse {
}

// Semaphore service
service SemaphoreService {

    // Acquires permit(s) from the semaphore
    rpc Acquire(AcquireRequest) returns (AcquireResponse) {}

    // Releases permit(s) from the semaphore
    rpc Release(ReleaseRequest) returns (ReleaseResponse) {}

}
